--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "ckeditor4-react": "^2.1.0",
     "firebase": "^9.4.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
