--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.4.0",
+    "reselect": "^4.1.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
