--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.7.0",
+    "@stripe/stripe-js": "^1.22.0",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.25.0",
     "ckeditor4-react": "^2.1.0",
     "firebase": "^9.4.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-country-region-selector": "^3.4.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
@@ -21,6 +25,7 @@
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.4.0",
     "reselect": "^4.1.5",
+    "stripe": "^8.199.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
